# cmake-trainings

./: CMakeLists.txt  build.sh  readme.md  run.sh
src/app/: CMakeLists.txt  main.cpp
src/data_producer_lib/: CMakeLists.txt
src/data_producer_lib/data_producer/: data_producer.cpp  data_producer.h
src/data_producer_lib/factory/: factory.cpp  factory.h
src/data_producer_lib/inc/: data_producer_iface.h  producer_factory_iface.h
src/data_producer_lib/inc/shared_data_types/: int_32_object.h
